added login functionality

--- a/music_wall/app/views/index.erb
+++ b/music_wall/app/views/index.erb
@@ -1,4 +1,15 @@
-<h1>Home Page</h1>
-<h2><a href="/songs">Take a look at all the songs we have available!</a></h2>
-
-<p><a href="/songs/new">Submit your own song to this list here.</a></p>
+<div class="container">
+  <h1 class="text-center">Home Page</h1>
+  <div class ="row">
+    <div class ="col-sm-6">
+      <h2 class ="text-center">
+        <a href="/songs">View Songs</a>
+      </h2>
+    </div>
+    <div class="col-sm-6">
+      <h2 class ="text-center">
+        <a href="/songs/new">Submit a Song</a>
+      </h2>
+    </div>
+  </div>
+</div>
