--- a/music_wall/app/views/layout.erb
+++ b/music_wall/app/views/layout.erb
@@ -6,11 +6,12 @@
     differences in how form elements appear between Firefox and IE
     See: http://necolas.github.com/normalize.css/
   -->
-  <link rel="stylesheet" href="/stylesheets/normalize.css">
+  <!-- <link rel="stylesheet" href="/stylesheets/normalize.css"> -->
   <!--
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="/stylesheets/application.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/javascript/application.js"></script>
@@ -18,6 +19,19 @@
   <title></title>
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-form navbar-right">
+          <form class="form-signin" method="post" action="/login">
+              <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+              <input type="password" name="password" class="form-control" placeholder="Password" required>
+              <input class="input" type="submit" value="Login">
+            </form>
+            <span><a href="/register">Register for an account</a></span>
+            <span><a href-"/logout">Logout</a></span>
+        </div>
+      </div>
+    </nav>
   <%= yield %>
 </body>
 </html>
