--- a/music_wall/app/views/layout.erb
+++ b/music_wall/app/views/layout.erb
@@ -19,19 +19,30 @@
   <title></title>
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <div class="navbar-form navbar-right">
-          <form class="form-signin" method="post" action="/login">
-              <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
-              <input type="password" name="password" class="form-control" placeholder="Password" required>
-              <input class="input" type="submit" value="Login">
-            </form>
-            <span><a href="/register">Register for an account</a></span>
-            <span><a href-"/logout">Logout</a></span>
+  <% if session[:email].nil? %>
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
+          <div class="navbar-form navbar-right">
+            <form class="form-signin" method="post" action="/login">
+                <input type="email" name="email" class="form-control" placeholder="Email address" required autofocus>
+                <input type="password" name="password" class="form-control" placeholder="Password" required>
+                <input class="input" type="submit" value="Login">
+              </form>
+              <span><a href="/register">Register for an account</a></span>
+
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    <% else %>
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
+          <div class="navbar-form navbar-right">
+            <span><strong>Welcome <%="#{session[:email]}"%>!</strong></span>
+            <span><a href="/logout">Logout</a></span>
+          </div>
+        </div>
+      </nav>
+    <% end %>
   <%= yield %>
 </body>
 </html>
